Cloud/GCP-Cloud-Migration/GCP-Cloud-Migration/01-VMware-to-GCP/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: migration-app
  labels:
    project: vmware-to-aws
