Cloud/GCP-Cloud-Migration/GCP-Cloud-Migration/01-VMware-to-GCP/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: migration-app
  namespace: migration-app
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: migration.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: migration-app
                port:
                  number: 80
